Fix graph tooltip overlap.

--- a/assets/sass/widgets/_googlesitekit-widget-analyticsAllTraffic.scss
+++ b/assets/sass/widgets/_googlesitekit-widget-analyticsAllTraffic.scss
@@ -180,6 +180,7 @@
 		// selected.
 		.googlesitekit-chart--PieChart div.google-visualization-tooltip {
 			pointer-events: auto;
+			z-index: 8;
 		}
 	}
 
